Bring in the frontend framework and move runner out of the generic src dir

--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "verdant",
   "version": "0.1.0",
   "description": "A fast, opinionated test runner for Typescript/Javascript and co.",
-  "main": "src/index.js",
   "type": "module",
+  "main": "dist/framework/index.js",
+  "bin": {
+    "verdant": "./dist/runner/main.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "clean": "rm -rf dist"
-  },
-  "bin": {
-    "verdant": "./dist/main.js"
   },
   "keywords": [
     "testing"
@@ -18,14 +18,23 @@
   "author": "Erik Simmler",
   "license": "MIT",
   "devDependencies": {
+    "@types/jsdom": "^16.2.9",
     "@types/lodash-es": "^4.17.4",
     "@types/minimatch": "^3.0.4",
     "@types/node": "^14.14.37",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
     "chalk": "^4.1.0",
     "chokidar": "^3.5.1",
     "esbuild": "^0.10.2",
+    "eslint": "^7.23.0",
+    "jsdom": "^16.5.1",
     "lodash-es": "^4.17.21",
     "minimatch": "^3.0.4",
     "typescript": "^4.2.3"
+  },
+  "dependencies": {
+    "@types/sinon": "^9.0.11",
+    "sinon": "^10.0.0"
   }
 }
