--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jsdom": "^16.5.1",
     "lodash-es": "^4.17.21",
     "minimatch": "^3.0.4",
+    "prettier": "^2.2.1",
     "typescript": "^4.2.3"
   },
   "dependencies": {
