Add a command that can bundle all tests into a single file runnable by node
The intent is to make the quickest possible test file runnable in something like stryker

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "exports": {
     ".": "./dist/framework/index.js",
     "./helpers": "./dist/framework/helpers.js",
+    "./parentPortReporter": "./dist/framework/parentPortReporter.js",
+    "./bailFastReporter": "./dist/framework/bailFastReporter.js",
     "./runner": "./dist/runner.js"
   },
   "bin": {
