Consolidate the "frontend" and "runner" reporters
It turns out they're basically the same thing, so why the separation? In theory this should make it fairly easy to shuttle around reports from various sources

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "exports": {
     ".": "./dist/framework/index.js",
     "./helpers": "./dist/framework/helpers.js",
-    "./parentPortReporter": "./dist/framework/parentPortReporter.js",
-    "./bailFastReporter": "./dist/framework/bailFastReporter.js",
+    "./parentPortReporter": "./dist/reporters/parentPort.js",
+    "./bailReporter": "./dist/reporters/bail.js",
     "./runner": "./dist/runner.js"
   },
   "bin": {
