--- a/package.json
+++ b/package.json
@@ -44,10 +44,13 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "@istanbuljs/schema": "^0.1.3",
     "@types/lodash": "^4.14.168",
     "@types/sinon": "^9.0.11",
+    "c8": "^7.7.0",
     "fake-indexeddb": "^3.1.2",
     "lodash": "^4.17.21",
+    "nyc": "^15.1.0",
     "sinon": "^10.0.0"
   }
 }
