Rename to avoid an apparently not fully published project that owns the name on NPM
It's a minor bummer, but not really a big deal.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "verdant",
+  "name": "@tgecho/verdant",
   "version": "0.1.0",
   "description": "A fast, opinionated test runner for Typescript/Javascript and co.",
   "main": "./dist/framework/index.js",
