Switch name back to "verdant" since I was able to publish a v0.3.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@tgecho/verdant",
-  "version": "0.2.0",
+  "name": "verdant",
+  "version": "0.3.0",
   "description": "A fast, opinionated test runner for Typescript/Javascript and co.",
   "main": "./dist/framework/index.js",
   "browser": "./dist/framework/index.js",
